fix over-margin causing overlap

--- a/scss/variare.scss
+++ b/scss/variare.scss
@@ -119,7 +119,7 @@ a {
     ul.tabmenu {
       display: inline-block;
       vertical-align: middle;
-      margin: 12px 0 0 0;
+      margin: 10px 0 0 0;
 
       li {
         display: inline-block;
